# CasinoSimulator

./: CMakeLists.txt
.cache/clangd/index/: game.cpp.09AEACA858EE4DB2.idx  game.hpp.9B9696997C7C621A.idx  main.cpp.AB10BAE2D5D0B380.idx
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
include/: game.hpp  shader_utils.hpp
src/: game.cpp  glad.c  main.cpp  shader_utils.cpp
